chore(docker): smaller docker images first try